[gd_scene load_steps=110 format=2]

[ext_resource path="res://assets/spritesheets/equipment/short_sword_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/spritesheets/equipment/wooden_shield_run_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://assets/spritesheets/equipment/short_sword_run_spritesheet.png" type="Texture" id=4]
[ext_resource path="res://assets/shaders/flash.shader" type="Shader" id=5]
[ext_resource path="res://assets/spritesheets/equipment/skull_cap_spritesheet.png" type="Texture" id=6]
[ext_resource path="res://assets/spritesheets/equipment/wooden_shield_spritesheet.png" type="Texture" id=7]
[ext_resource path="res://assets/spritesheets/equipment/skull_cap_run_spritesheet.png" type="Texture" id=8]
[ext_resource path="res://assets/spritesheets/equipment/kitsune_mask_spritesheet.png" type="Texture" id=9]
[ext_resource path="res://assets/spritesheets/equipment/witch_hat_run_spritesheet.png" type="Texture" id=10]
[ext_resource path="res://assets/spritesheets/equipment/kitsune_mask_run_spritesheet.png" type="Texture" id=11]
[ext_resource path="res://assets/spritesheets/equipment/witch_hat_spritesheet.png" type="Texture" id=12]
[ext_resource path="res://assets/spritesheets/equipment/platemail_spritesheet.png" type="Texture" id=13]
[ext_resource path="res://assets/img/shadow_medium.png" type="Texture" id=14]
[ext_resource path="res://assets/spritesheets/equipment/platemail_run_spritesheet.png" type="Texture" id=15]
[ext_resource path="res://assets/spritesheets/character_idle_spritesheet.png" type="Texture" id=17]
[ext_resource path="res://assets/spritesheets/character_run_spritesheet.png" type="Texture" id=18]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.53799
height = 11.2253

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 319.65, 180.182 )

[sub_resource type="CircleShape2D" id=3]
radius = 25.2367

[sub_resource type="CircleShape2D" id=4]
radius = 10.6565

[sub_resource type="CircleShape2D" id=5]
radius = 7.5801

[sub_resource type="CapsuleShape2D" id=6]
radius = 6.8109
height = 9.84431

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Wooden Shield moving",
"speed": 8.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Wooden Shield idle",
"speed": 8.0
} ]

[sub_resource type="ShaderMaterial" id=18]
shader = ExtResource( 5 )
shader_param/flash_color = Color( 0.839216, 0.227451, 0.227451, 1 )
shader_param/flash_intensity = 0.0

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 17 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 17 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 17 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 18 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 18 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 18 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 18 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 18 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 18 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 18 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 18 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 18 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 18 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 17 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 17 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 17 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "moving",
"speed": 8.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "moving_panic",
"speed": 8.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "idle_panic",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 13 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 13 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 13 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 15 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 15 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 15 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 15 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 15 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=50]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "Platemail idle",
"speed": 8.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "Platemail moving",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 10 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 10 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 10 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 9 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 9 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 12 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 12 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 11 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 11 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 6 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 8 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 8 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=81]
animations = [ {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "Witch Hat moving",
"speed": 8.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "Kitsune Mask idle",
"speed": 8.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "Witch Hat idle",
"speed": 8.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "Kitsune Mask moving",
"speed": 8.0
}, {
"frames": [ SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": true,
"name": "Skull Cap idle",
"speed": 8.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "Skull Cap moving",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=92]
animations = [ {
"frames": [ SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ) ],
"loop": true,
"name": "Short Sword idle",
"speed": 8.0
}, {
"frames": [ SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ) ],
"loop": true,
"name": "Short Sword moving",
"speed": 8.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
z_index = 9
z_as_relative = false
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="EnemyCollisionDetector" type="Area2D" parent="."]
position = Vector2( 0, -15 )
z_index = 9
z_as_relative = false
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollisionDetector"]
shape = SubResource( 1 )

[node name="ZoneTriggerDetector" type="Area2D" parent="."]
position = Vector2( 0, -15 )
z_index = 9
z_as_relative = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneTriggerDetector"]
shape = SubResource( 2 )

[node name="PickupTriggerDetector" type="Area2D" parent="."]
position = Vector2( 0, -15 )
z_index = 9
z_as_relative = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupTriggerDetector"]
shape = SubResource( 3 )

[node name="PickupCollectorDetector" type="Area2D" parent="." groups=[
"item_collectors",
]]
position = Vector2( 0, -15 )
z_index = 9
z_as_relative = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupCollectorDetector"]
shape = SubResource( 4 )

[node name="WeaponCollectorDetector" type="Area2D" parent="." groups=[
"weapon_collectors",
]]
position = Vector2( 0, -15 )
z_index = 9
z_as_relative = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponCollectorDetector"]
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
z_index = 9
z_as_relative = false
shape = SubResource( 6 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 0.227001 )
z_index = 9
z_as_relative = false
texture = ExtResource( 14 )

[node name="OffHand" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -23.71 )
z_index = 9
z_as_relative = false
frames = SubResource( 17 )
animation = "Wooden Shield moving"
frame = 1
playing = true

[node name="Character" type="AnimatedSprite" parent="."]
material = SubResource( 18 )
position = Vector2( 0, -23.71 )
z_index = 9
z_as_relative = false
frames = SubResource( 39 )
animation = "moving"
frame = 3
playing = true

[node name="Chest" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -23.71 )
z_index = 9
z_as_relative = false
frames = SubResource( 50 )
animation = "Platemail idle"
frame = 1
playing = true

[node name="Helmet" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -23.71 )
z_index = 9
z_as_relative = false
frames = SubResource( 81 )
animation = "Witch Hat moving"
frame = 1
playing = true

[node name="Weapon" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -23.71 )
z_index = 9
z_as_relative = false
frames = SubResource( 92 )
animation = "Short Sword moving"
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -15 )
current = true

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="DeathLingerTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="PickupTriggerDetector" to="." method="_on_PickupTriggerDetector_area_entered"]
[connection signal="area_entered" from="PickupCollectorDetector" to="." method="_on_PickupCollectorDetector_area_entered"]
